--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,11 @@ body {
   padding: 1rem 2rem;
 }
 
-.book h2 {
+.book h1 {
   margin-top: 0.5rem;
+}
+.book h3 {
+  color: darkblue;
+  font-size: 0.75rem;
+  margin-top: 0.25rem;
 }
